# Resume-Critique-Engine

./: .gitignore  README.md  SETUP.md  VSCODE_TESTING_GUIDE.md  test-resume.txt
ai-service/: .env  main.py  requirements.txt  resume_analyzer.py
backend/: .env  Cargo.toml
backend/src/: auth.rs  config.rs  db.rs  handlers.rs  main.rs  models.rs
database/: docker-compose.yml  init.sql
simple-backend/: main.py  resume_critique.db  start.sh
