[package]
name = "resume-critique-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
bytes = "1.0"
futures-util = "0.3"
mime = "0.3.17"
mime_guess = "2.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
